# C-Unit-Test-Demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.c
src/my_lib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/my_lib/: MyLib_AllTests.cmake  SwitchableMock.c  testRadio.cpp
